[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/MaskContainer.gd" type="Script" id=1]
[ext_resource path="res://assets/images/close.svg" type="Texture" id=2]
[ext_resource path="res://assets/images/texture_rect.svg" type="Texture" id=3]
[ext_resource path="res://assets/images/arrow_down.svg" type="Texture" id=4]
[ext_resource path="res://assets/images/arrow_up.svg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.231373, 0.309804, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.145098, 0.172549, 0.231373, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0980392, 0.113725, 0.152941, 1 )

[node name="MaskContainer" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 5.0
margin_right = 254.0
margin_bottom = 116.0
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 244.0
margin_bottom = 44.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 243.0
margin_bottom = 43.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="MaskBox" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 237.0
margin_bottom = 37.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer/MaskBox"]
margin_right = 216.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="DeleteButton" type="TextureButton" parent="VBoxContainer/PanelContainer/MarginContainer/MaskBox/HBoxContainer"]
margin_top = 8.0
margin_right = 16.0
margin_bottom = 24.0
size_flags_vertical = 4
texture_normal = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer/MarginContainer/MaskBox/HBoxContainer"]
margin_left = 20.0
margin_right = 52.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/MaskBox/HBoxContainer"]
margin_left = 56.0
margin_top = 9.0
margin_right = 216.0
margin_bottom = 23.0
rect_min_size = Vector2( 160, 0 )
text = "Sample text"
clip_text = true

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/PanelContainer/MarginContainer/MaskBox"]
margin_left = 220.0
margin_top = 10.0
margin_right = 232.0
margin_bottom = 22.0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
stretch_mode = 3

[node name="RGBContainer" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 44.0
margin_right = 244.0
margin_bottom = 111.0
custom_constants/margin_right = 3
custom_constants/margin_left = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/RGBContainer"]
margin_left = 3.0
margin_right = 241.0
margin_bottom = 67.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/RGBContainer/PanelContainer2"]
margin_left = 1.0
margin_right = 237.0
margin_bottom = 66.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="RGBBox" type="HBoxContainer" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 231.0
margin_bottom = 61.0
custom_constants/separation = 11

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox"]
margin_top = 4.0
margin_right = 48.0
margin_bottom = 52.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox"]
margin_left = 59.0
margin_right = 223.0
margin_bottom = 56.0
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox/GridContainer"]
margin_top = 1.0
margin_right = 10.0
margin_bottom = 15.0
text = "R"

[node name="RedSlider" type="HSlider" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox/GridContainer"]
margin_left = 14.0
margin_right = 164.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
max_value = 1.0
step = 0.01
value = 1.0
ticks_on_borders = false

[node name="Label2" type="Label" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox/GridContainer"]
margin_top = 21.0
margin_right = 10.0
margin_bottom = 35.0
text = "G"

[node name="GreenSlider" type="HSlider" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox/GridContainer"]
margin_left = 14.0
margin_top = 20.0
margin_right = 164.0
margin_bottom = 36.0
rect_min_size = Vector2( 150, 0 )
max_value = 1.0
step = 0.01
value = 1.0
ticks_on_borders = false

[node name="Label3" type="Label" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox/GridContainer"]
margin_top = 41.0
margin_right = 10.0
margin_bottom = 55.0
text = "B"

[node name="BlueSlider" type="HSlider" parent="VBoxContainer/RGBContainer/PanelContainer2/MarginContainer/RGBBox/GridContainer"]
margin_left = 14.0
margin_top = 40.0
margin_right = 164.0
margin_bottom = 56.0
rect_min_size = Vector2( 150, 0 )
max_value = 1.0
step = 0.01
value = 1.0
ticks_on_borders = false

[connection signal="pressed" from="VBoxContainer/PanelContainer/MarginContainer/MaskBox/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/MarginContainer/MaskBox/TextureButton" to="." method="_on_TextureButton_toggled"]
